--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,9 @@
 @import "tailwindcss";
 
-:root {
-  
-  --color-primary: 18 23 37; /*(hex #121725 → rgb(18, 23, 37))*/
-  --font-sans: "Inter", system-ui, sans-serif;
-}
-
-
 @theme {
-  --color-primary: rgb(var(--color-primary));
+  --color-primary: rgb( 18 23 37 );
   --font-sans: var(--font-sans);
 }
-
 
 body {
   font-family: var(--font-sans);
